Spark Data Frame with eBay auctions dataset

--- a/1_examples.ipynb
+++ b/1_examples.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -25,12 +25,12 @@
     "import os\n",
     "from pyspark import SparkContext\n",
     "sc = SparkContext.getOrCreate()\n",
-    "text_file = sc.textFile(\"example.txt\")\n",
+    "text_file = sc.textFile(\"raw/example.txt\")\n",
     "counts = text_file.flatMap(lambda line: line.split(\" \")).map(lambda word: (word,1)).reduceByKey(lambda a, b: a+b)\n",
-    "if \"word_count\" in os.listdir(\".\"):\n",
+    "if \"word_count\" in os.listdir(\"./raw\"):\n",
     "    pass\n",
     "else:\n",
-    "    counts.saveAsTextFile(\"word_count\")"
+    "    counts.saveAsTextFile(\"raw/word_count\")"
    ]
   },
   {
